Header: Logo fix on mobile + side nav sign out fix.

--- a/public/less/_navigation.less
+++ b/public/less/_navigation.less
@@ -363,7 +363,8 @@ a.siteSelectorIcon{
     padding: 10px;
     display: inline-block;
     img{
-      height: 55px;
+      max-width: 100%;
+      padding-top: 10px;
     }
   }
 
@@ -897,7 +898,7 @@ a.siteSelectorIcon{
     text-transform: none;
     color: #000;
     cursor: pointer;
-    :hover{
+    &:hover{
       text-decoration: none;
     }
   }
